# simple-federated

./: .gitignore  README.md  pyproject.toml
src/: centralized.py  client.py  server.py  task.py
